--- a/figyelmeztetes.html
+++ b/figyelmeztetes.html
@@ -18,8 +18,8 @@
         <h2>Felnőtt tartalom!</h2>
         <p>Elmúltál már 18 éves?</p>
         <div class="btn-group">
-            <a class="btn btn-primary" href="/erotika.html" role="button">Igen</a>
-            <a class="btn btn-secondary" href="/main.html" role="button">Nem</a>
+            <a class="btn btn-primary" href="erotika.html" role="button">Igen</a>
+            <a class="btn btn-secondary" href="index.html" role="button">Nem</a>
         </div>
     </div>
 
